--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <img src="img/headshot1-square4.jpg" id="prof-pic" />
                             <p>
                                 Hey! My name is Le Thanh Tuyen and I'm a web developer with a passion for front end development and design. I'm currently a third year student at
-                                <a href="http://www.northeastern.edu/" target="_blank">Northeastern University</a> pursuing a degree in <a href="http://www.ccs.neu.edu/undergraduate/degree-programs/information-science-bachelor-of-science/" target="_blank">information science</a> with a minor in interaction design. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.
+                                <a href="https://hufi.edu.vn/" target="_blank">Ho Chi Minh City University of Food Industry</a>. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.
                                 <br>
                                 <br> When I'm not on the computer, I enjoy snowboarding, swimming, and petting dogs.
                             </p>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="row text-center">
                         <div id="tl-dr">
-                            <h3>TL;DR?&nbsp;&nbsp;Self Proclamations:</h3>
+                            <h3>Self Proclamations:</h3>
                             <!-- <h4>Self Proclamations:</h4> -->
                             <div class="tldr-proc">
                                 <div class="tldr-icon" id="tldr-keyboard"><i class="fa fa-keyboard-o"></i></div>
@@ -96,8 +96,8 @@
                                 <h5>UX Enthusiast</h5>
                             </div>
                             <div class="tldr-proc">
-                                <div class="tldr-icon"><i class="fa fa-tree"></i></div>
-                                <h5>Snowboarder</h5>
+                                <div class="tldr-icon"><i class="fa fa-mobile"></i></div>
+                                <h5>App Developer</h5>
                             </div>
                             <div </div>
                             </div>
