--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <title>Le Thanh Tuyen | Web Developer &amp; UX Enthusiast</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="Le Thanh Tuyen, brittany, chiang, bchiang7, northeastern university, northeastern, university, student, front-end, web, website, computer, software, developer, engineer, designer, co-op" />
+    <meta name="keywords" content="Le Thanh Tuyen, lethanhtuyen1008, northeastern university, northeastern, university, student, front-end, web, website, computer, software, developer, engineer, designer, co-op" />
     <meta name="author" content="Le Thanh Tuyen" />
     <meta name="description" content="Web developer, UX Enthusiast, and everything in between." />
     <meta property="og:description" content="Web developer, UX Enthusiast, and everything in between." />
-    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://brittanychiang.com/img/social-image.png" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://dev-tuyenlt.netlify.app//img/social-image.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:title" content="Le Thanh Tuyen's Personal Website" />
-    <meta property="og:url" content="http://brittanychiang.com/" />
+    <meta property="og:url" content="https://dev-tuyenlt.netlify.app//" />
     <meta property="og:type" content="website" />
     <link rel="shortcut icon" href="img/logo-transparent-00009C.png">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -39,7 +39,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                         <i class="fa fa-2x fa-bars"></i>
                     </button>
-                    <a class="navbar-brand page-scroll" href="http://brittanychiang.com/">
+                    <a class="navbar-brand page-scroll" href="https://dev-tuyenlt.netlify.app">
                         <img src="img/logo-transparent-white-30pt.png" />Le Thanh Tuyen</a>
                 </div>
                 <div class="collapse navbar-collapse navbar-main-collapse">
@@ -224,7 +224,7 @@
                             <div class="col-md-12">
                                 <h2>Check out my résumé!</h2>
                                 <div id="resume-button">
-                                    <a class="resume-btn wp4" href="resume2016.pdf" target="_blank">Grab A Copy</a>
+                                    <a class="resume-btn wp4" href="LeThanhTuyen.pdf" target="_blank">Grab A Copy</a>
                                 </div>
                             </div>
                         </div>
@@ -481,7 +481,7 @@
                         <Br>
                         <p class="modal-description"><strong>Note:</strong> For an optimal experience, use chrome with your sound on</p>
                         <p class="modal-description"><strong>Warning:</strong> Very resource heavy &mdash; efficiency &amp; optimization was definitely not a concern for this project.</p>
-                        <p class="visit"><a href="http://brittanychiang.com/feedback-loop/" target="_blank" id="visit-btn">Visit Site</a> or <a href="https://github.com/bchiang7/feedback-loop" target="_blank" id="visit-btn">View Source</a></p>
+                        <p class="visit"><a href="https://dev-tuyenlt.netlify.app//feedback-loop/" target="_blank" id="visit-btn">Visit Site</a> or <a href="https://github.com/bchiang7/feedback-loop" target="_blank" id="visit-btn">View Source</a></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -527,7 +527,7 @@
                             <img class="img-responsive img-centered" src="img/fontipsums.png" alt="">
                         </p>
                         <p class="modal-description">I really enjoy typography and recently became semi-obssessed with discovering new font pairings. I whipped up this simple website to display some of my favorite pairings combined with some fun lorem ipsum variations I found on the web.</p>
-                        <p class="visit"><a href="http://brittanychiang.com/fontipsums/" target="_blank" id="visit-btn">Visit Site</a> or <a href="https://github.com/bchiang7/fontipsums" target="_blank" id="visit-btn">View Source</a></p>
+                        <p class="visit"><a href="https://dev-tuyenlt.netlify.app//fontipsums/" target="_blank" id="visit-btn">Visit Site</a> or <a href="https://github.com/bchiang7/fontipsums" target="_blank" id="visit-btn">View Source</a></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -730,7 +730,7 @@
                         <p class="modal-description">One day I realized my bookmarks folder was overflowing and disorganized. So, I decided to make what I had always hoped my bookmarks folder to look like. This site is essentially a visualization of my bookmarks folder, and also a resource for other developers and designers. This site is mainly for my personal reference, but hopefully, other people find it useful.</p>
                         <br>
                         <p class="modal-description"><b>NOTE:</b>&nbsp;&nbsp;Optimized for desktop only.</p>
-                        <p class="visit"><a href="http://brittanychiang.com/bookmarks/" target="_blank" id="visit-btn">Visit Site</a> or <a href="https://github.com/bchiang7/Bookmarks" target="_blank" id="visit-btn">View Source</a></p>
+                        <p class="visit"><a href="https://dev-tuyenlt.netlify.app//bookmarks/" target="_blank" id="visit-btn">Visit Site</a> or <a href="https://github.com/bchiang7/Bookmarks" target="_blank" id="visit-btn">View Source</a></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -815,7 +815,7 @@
                         <h2>Get In Touch!</h2>
                         <p>Whether you have an idea for a project or just want to chat, feel free to shoot me an email!</p>
                         <p style="margin-top:40px;">
-                            <a id="email-button" href="mailto:brittany.chiang@gmail.com" target="_blank">Say Hello</a>
+                            <a id="email-button" href="mailto:lethanhtuyen10081998@gmail.com" target="_blank">Say Hello</a>
                         </p>
                     </div>
                 </div>
