--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <h2>A Little Bit About Me</h2>
                             <img src="img/headshot1-square4.jpg" id="prof-pic" />
                             <p>
-                                Hey! My name is Le Thanh Tuyen and I'm a web developer with a passion for front end development and design. I'm currently a third year student at
+                                Hey! My name is Le Thanh Tuyen and I'm a web developer with a passion for front end development and design. I'm an alumnus of the
                                 <a href="https://hufi.edu.vn/" target="_blank">Ho Chi Minh City University of Food Industry</a>. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.
                                 <br>
                                 <br> When I'm not on the computer, I enjoy snowboarding, swimming, and petting dogs.
