--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <h2>Check out my résumé!</h2>
+                                <h2>Check out my CV</h2>
                                 <div id="resume-button">
                                     <a class="resume-btn wp4" href="LeThanhTuyen.pdf" target="_blank">Grab A Copy</a>
                                 </div>
