--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         Lookin' at the source code huh?
         Be sure to drop me a line! I'd love to chat,
         whether it's about code, design, dogs,
-        coffee, snowboarding, or anything in between.
+        coffee, soccer, or anything in between.
 
         - Le Thanh Tuyen
 
