--- a/index.html
+++ b/index.html
@@ -216,8 +216,6 @@
                                 <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive"
                                         src="img/skills/js.png" id="js"></div>
                                 <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive"
-                                        src="img/skills/java.png"></div>
-                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive"
                                         src="img/skills/jquery.png" id="jquery"></div>
                                 <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive"
                                         src="img/skills/bootstrap.png" id="bootstrap"></div>
@@ -228,11 +226,9 @@
                                 <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive"
                                         src="img/skills/github.png"></div>
                                 <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive"
-                                        src="img/skills/photoshop.png"></div>
-                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive"
-                                        src="img/skills/indesign.png"></div>
-                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive"
                                         src="img/skills/jira.png"></div>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive"
+                                        src="img/skills/mui.png"></div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-3 employment wp3">
