--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="intro-content">
                     <h1 class="animated fadeInDown delay-05s">Hi, I'm Le Thanh Tuyen</strong>
                     </h1>
-                    <p class="subtitle animated fadeInUp delay-05s">Web Developer &amp; UX Enthusiast</p>
+                    <p class="subtitle animated fadeInUp delay-05s">Full Stack Developer &amp; UX Enthusiast</p>
                     <a class="fa fa-angle-down page-scroll" href="#about"></a>
                 </div>
             </div>
