--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         data-target=".navbar-main-collapse">
                         <i class="fa fa-2x fa-bars"></i>
                     </button>
-                    <a class="navbar-brand page-scroll" href="https://dev-tuyenlt.netlify.app">
+                    <a class="navbar-brand page-scroll" href="https://tuyenlt.netlify.app">
                         <img src="img/logo-transparent-white-30pt.png" />Le Thanh Tuyen</a>
                 </div>
                 <div class="collapse navbar-collapse navbar-main-collapse">
