--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <meta name="author" content="Le Thanh Tuyen" />
     <meta name="description" content="Web developer, UX Enthusiast, and everything in between." />
     <meta property="og:description" content="Web developer, UX Enthusiast, and everything in between." />
-    <meta prefix="og: http://ogp.me/ns#" property="og:image"
-        content="https://dev-tuyenlt.netlify.app//img/social-image.png" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://tuyenlt.netlify.app/img/SEO.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:title" content="Le Thanh Tuyen's Personal Website" />
-    <meta property="og:url" content="https://dev-tuyenlt.netlify.app//" />
+    <meta property="og:url" content="https://tuyenlt.netlify.app/" />
     <meta property="og:type" content="website" />
     <link rel="shortcut icon" href="img/logo-transparent-00009C.png">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -175,7 +174,7 @@
                             <p>I've been doing web development for about 3 years now, and I'm always eager to learn more
                                 in this fast paced industry.</p>
                         </div>
-                        <!-- <div class="col-md-8 col-xs-8 skills">
+                        <div class="col-md-12 col-xs-12 skills">
                             <ul class="skills-bar-container">
                                 <label>HTML5</label>
                                 <span class="percent" id="html-percent"></span>
@@ -203,7 +202,7 @@
                                     <span class="progressbar progressorange wp3-5" id="progress-5"></span>
                                 </li>
                             </ul>
-                        </div> -->
+                        </div>
                         <div class="col-sm-offset-1 col-xs-12 col-sm-6 col-md-6 skills-section wp3">
                             <h3>Some technologies I've worked with:</h3>
                             <div class="row">
