--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta property="og:title" content="Le Thanh Tuyen's Personal Website" />
     <meta property="og:url" content="https://tuyenlt.netlify.app/" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://tuyenlt.netlify.app/img/SEO.png" />
+
     <link rel="shortcut icon" href="img/logo-transparent-00009C.png">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
