--- a/index.html
+++ b/index.html
@@ -308,6 +308,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="portfolio-item-wrapper wp5">
+                        <div class="portfolio-item" data-toggle="modal" href="#taggrading">
+                            <div class="portfolio-overlay"></div>
+                            <div class="links">
+                                <a class="image-link"><i class="fa fa-search-plus"></i></a>
+                                <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
+                            </div>
+                            <img src="img/taggrading.png" alt="image">
+                            <div class="portfolio-info">
+                                <h3>Taggrading</h3>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -630,6 +643,93 @@
                                             performence
                                             SSR
                                         </p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <p class="visit"><a href="https://www.originscannabis.com/" target="_blank" id="visit-btn">Visit
+                                Site</a>
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+         <div class="modal fade" id="taggrading" tabindex="-1" role="dialog" aria-labelledby="fontipsumsModal"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">Taggrading</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>
+                            <img class="img-responsive img-centered" src="img/origin.PNG" alt="">
+                        </p>
+                        <p class="modal-description"></p>
+                        <br />
+                        <div>
+                            <p>
+                            <h3>Work in project:</h3>
+                            </p>
+
+                            <div>
+                                <p><b>Team size:</b> 9</p>
+                                <ul class="a">
+                                      <li>
+                                        <p>1 Product Owner</p>
+                                    </li>
+                                    <li>
+                                        <p>1 Project Manager</p>
+                                    </li>
+                                    <li>
+                                        <p>2 BE NodeJS Developer from Vietnam</p>
+                                    </li>
+                                    <li>
+                                        <p>1 BE Python from US</p>
+                                    </li>
+                                    <li>
+                                        <p>2 FE Developer from Vietnam</p>
+                                    </li>
+                                    <li>
+                                        <p>1 Quality Control</p>
+                                    </li>
+                                    <li>
+                                        <p>1 Business Analyst</p>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div>
+                                <p><b>Time:</b> 22/8/2022 - 23/2/2024</p>
+                            </div>
+
+                            <div>
+                                <p><b>Responsibility:</b></p>
+
+                                <ul class="a">
+                                    <li>
+                                        <p>Front End developer working with ReactJS</p>
+                                    </li>
+                                    <li>
+                                        <p>Implement feature, fix bug and design website from file figma by HTML, CSS,
+                                            Material UI
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p>Integrate API NodeJS to website</p>
+                                    </li>
+                                    <li>
+                                        <p>Take on the position of BE developer in the project, handle purchasing and
+                                            selling goods, managing import and export
+                                            goods and handling BE errors</p>
+                                    </li>
+                                    <li>
+                                        <p>Break down task Front End and handle performance website</p>
                                     </li>
                                 </ul>
                             </div>
