--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                             </div>
                         </div>
 
-                        <p class="visit"><a href="https://www.originscannabis.com/" target="_blank" id="visit-btn">Visit
+                        <p class="visit"><a href="https://taggrading.com/" target="_blank" id="visit-btn">Visit
                                 Site</a>
                         </p>
                     </div>
