--- a/index.html
+++ b/index.html
@@ -193,15 +193,31 @@
                                 <li>
                                     <span class="progressbar progresspurple wp3-3" id="progress-3"></span>
                                 </li>
-                                <label>Java</label>
-                                <span class="percent" id="angular-percent"></span>
+                                 <label>ReactJS</label>
+                                <span class="percent" id="html-percent"></span>
                                 <li>
-                                    <span class="progressbar progressgreen wp3-4" id="progress-4"></span>
+                                    <span class="progressbar progressred wp3-1" id="progress-1"></span>
                                 </li>
-                                <label>MEAN Stack</label>
-                                <span class="percent" id="php-percent"></span>
+
+                                </li>
+                                 <label>NextJS</label>
+                                <span class="percent" id="html-percent"></span>
                                 <li>
-                                    <span class="progressbar progressorange wp3-5" id="progress-5"></span>
+                                    <span class="progressbar progressred wp3-1" id="progress-1"></span>
+                                </li>
+
+                                </li>
+                                <label>AngularJS</label>
+                                <span class="percent" id="javascript-percent"></span>
+                                    <li>
+                                    <span class="progressbar progresspurple wp3-3" id="progress-3"></span>
+                                </li>
+
+                                </li>
+                                <label>NodeJS</label>
+                                <span class="percent" id="javascript-percent"></span>
+                                    <li>
+                                    <span class="progressbar progresspurple wp3-3" id="progress-3"></span>
                                 </li>
                             </ul>
                         </div>
